[package]
name = "radiobrowser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
async-std-resolver = "0.21.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures =  { version = "0.3.21" }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }