[package]
name = "radiobrowser"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["audio", "api", "radiobrowser"]
categories = ["multimedia::audio", "multimedia", "api-bindings"]
documentation = "https://docs.rs/radiobrowser"
readme = "README.md"
repository = "https://gitlab.com/radiobrowser/radiobrowser-lib-rust"

[dependencies]
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
async-std-resolver = "0.21.2"
chrono = { version = "0.4.19", features = ["serde"] }
futures =  { version = "0.3.21" }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }