[package]
name = "radiobrowser"
version = "0.4.1"
authors = ["segler_alex <segler_alex@web.de>"]
edition = "2021"
license = "MIT"
keywords = ["audio", "api", "radiobrowser"]
categories = ["multimedia::audio", "multimedia", "api-bindings"]
documentation = "https://docs.rs/radiobrowser"
description = "Client library for radiobrowser compatible servers with auto fallback to other available servers"
readme = "README.md"
repository = "https://gitlab.com/radiobrowser/radiobrowser-lib-rust"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-std-resolver = "0.22.0"
chrono = { version = "0.4.23", features = ["serde"], optional = true }
futures = { version = "0.3.25" }
log = { version = "0.4.17" }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }

[features]
default = ["chrono", "blocking"]
blocking = []

[[bin]]
name = "test"
required-features = ["blocking"]

[badges]
# The `maintenance` table indicates the status of the maintenance of
# the crate. This may be used by a registry, but is currently not
# used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# and https://github.com/rust-lang/crates.io/issues/2438 for more details.
#
# The `status` field is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "actively-developed" }